[tool.poetry]
name = "pfx"
version = "0.1.0"
description = "Install and manage tools in a user-controlled system prefix"
authors = ["Bradlee Speice <bradlee@speice.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^8.0.4"
dataclasses = { version = "^0.8", python = "<3.7" }

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
toml = "^0.10.2"

[tool.poetry.scripts]
pfx = "pfx.main:cli"

[[tool.poetry.source]]
name = "pypi_backup"
url = "https://pypi.org/simple/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
